@startuml Gyandeep_ER_Simple

' ============================================================
' Gyandeep ER Diagram - Based on Provided Schema
' ============================================================

hide stereotypes
skinparam linetype ortho
skinparam entity {
    BackgroundColor White
    BorderColor #2C3E50
    ArrowColor #2C3E50
}
skinparam attribute {
    BackgroundColor #ECF0F1
    BorderColor #3498DB
    FontColor #2C3E50
}

' ============================================================
' ENTITY: USERS
' ============================================================
entity "USERS" as users {
    *id : TEXT <<PK>>
    --
    *name : TEXT
    *email : TEXT
    *role : TEXT
    *password : TEXT
    googleId : TEXT
    faceImage : TEXT
    emailVerified : INTEGER
    preferences : TEXT
    history : TEXT
    assignedSubjects : TEXT
    performance : TEXT
    classId : TEXT
}

' ============================================================
' ENTITY: CLASSES
' ============================================================
entity "CLASSES" as classes {
    *id : TEXT <<PK>>
    --
    *name : TEXT
}

' ============================================================
' ENTITY: GRADES
' ============================================================
entity "GRADES" as grades {
    *id : TEXT <<PK>>
    --
    *studentId : TEXT <<FK>>
    *subject : TEXT
    *category : TEXT
    *title : TEXT
    *score : REAL
    *maxScore : REAL
    weight : REAL
    *date : TEXT
    *teacherId : TEXT <<FK>>
    createdAt : INTEGER
}

' ============================================================
' ENTITY: ATTENDANCE
' ============================================================
entity "ATTENDANCE" as attendance {
    *id : INTEGER <<PK>>
    --
    *session_id : TEXT <<FK>>
    *student_id : TEXT <<FK>>
    *status : TEXT
    verified_at : TEXT
}

' ============================================================
' ENTITY: QUESTION_BANK
' ============================================================
entity "QUESTION_BANK" as question_bank {
    *id : TEXT <<PK>>
    --
    *question : TEXT
    *options : TEXT
    *correctAnswer : TEXT
    tags : TEXT
    difficulty : TEXT
    subject : TEXT
}

' ============================================================
' ENTITY: TIMETABLE
' ============================================================
entity "TIMETABLE" as timetable {
    *id : TEXT <<PK>>
    --
    *day : TEXT
    *startTime : TEXT
    *endTime : TEXT
    *subject : TEXT
    *teacherId : TEXT <<FK>>
    *classId : TEXT <<FK>>
    room : TEXT
    createdAt : INTEGER
    updatedAt : INTEGER
}

' ============================================================
' ENTITY: TICKETS
' ============================================================
entity "TICKETS" as tickets {
    *id : TEXT <<PK>>
    --
    *userId : TEXT <<FK>>
    *userName : TEXT
    *subject : TEXT
    *message : TEXT
    category : TEXT
    *status : TEXT
    createdAt : INTEGER
    updatedAt : INTEGER
    version : INTEGER
}

' ============================================================
' ENTITY: CENTRALIZED_NOTES
' ============================================================
entity "CENTRALIZED_NOTES" as notes {
    *id : TEXT <<PK>>
    --
    *classId : TEXT <<FK>>
    *subjectId : TEXT <<FK>>
    unitNumber : INTEGER
    unitName : TEXT
    *title : TEXT
    *content : TEXT
    filePath : TEXT
    noteType : TEXT
    *teacherId : TEXT <<FK>>
    createdAt : INTEGER
}

' ============================================================
' ENTITY: AUDIT_LOGS
' ============================================================
entity "AUDIT_LOGS" as audit_logs {
    *id : INTEGER <<PK>>
    --
    *ts : INTEGER
    *type : TEXT
    *userId : TEXT <<FK>>
    details : TEXT
}

' ============================================================
' ENTITY: OTP
' ============================================================
entity "OTP" as otp {
    *userId : TEXT <<PK>> <<FK>>
    --
    *code : TEXT
    *expires : INTEGER
}

' ============================================================
' RELATIONSHIPS
' ============================================================

' Users - Classes: Teacher teaches Class
users ||--o{ classes : "1 teaches N"

' Users - Classes: Student belongs to Class
users ||--o{ classes : "N belongs_to"

' Users - Grades: Teacher assigns Grades
users ||--o{ grades : "1 assigns N"

' Users - Grades: Student receives Grades
users ||--o{ grades : "N receives"

' Users - Attendance: Student marks Attendance
users ||--o{ attendance : "N marks"

' Users - Timetable: Teacher manages Timetable
users ||--o{ timetable : "1 manages N"

' Users - Tickets: User creates Tickets
users ||--o{ tickets : "N creates"

' Users - Notes: Teacher uploads Notes
users ||--o{ notes : "N uploads"

' Users - Audit Logs: User performs Actions
users ||--o{ audit_logs : "N performs"

' Users - OTP: User has OTP
users ||--o{ otp : "1 has"

' Classes - Timetable: Class has Timetable
classes ||--o{ timetable : "1 has N"

' Classes - Notes: Class has Notes
classes ||--o{ notes : "1 has N"

' Classes - Grades: Class has Grades
classes ||--o{ grades : "1 has N"

@enduml
